--- a/lesson_5_5/lesson_5_5.csproj
+++ b/lesson_5_5/lesson_5_5.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CF6B4E20-49E8-4095-B897-6B58CE22C0DA}</ProjectGuid>
+    <ProjectGuid>{30BC9E74-19F8-4B0F-894A-03C376B22A65}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>lesson_5_4_2</RootNamespace>
-    <AssemblyName>lesson_5_4_2</AssemblyName>
+    <RootNamespace>lesson_5_5</RootNamespace>
+    <AssemblyName>lesson_5_5</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
